k8s/overlays/local/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atonixcorp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls: []
  rules:
    - host: app.atonixcorp.local
